fix: remove verticall spacing from page-container class

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,6 +33,6 @@ h6 {
 
 @layer components {
   .page-container {
-    @apply max-w-3xl px-6 py-10 md:px-4 mx-auto w-full;
+    @apply max-w-3xl px-6 md:px-4 mx-auto w-full;
   }
 }
